# crawler_controller

./: CMakeLists.txt  package.xml
scripts/: data_work.py  encoder_left (Kopie).py  encoder_left.py  encoder_right.py  manuel_control.py  node_parameters.py  q_learning.py  q_learning_3x3.py  q_learning_3x3_parameters.py  q_learning_3x3_safety_File.py  q_learning_3x3_safety_before_two.py  q_learning_3x3_sensor_test.py  start_stop_parameters_node.py
scripts/logs/: logfile.csv
scripts/test_scripts/: MD.py  SD.py  disp.py  display.py  gpio_control.py  key_test.py  keyboard_node.py  move_control.py  movement.py  node_parameters_test.py  node_test_test.py  pose_subscriber.py  q_learning_BACKUP_19_10.py  rpm_reader_2.py  start_stop_parameters_node_test.py
scripts/webapp/: app.py  app2.py  app_original.py  app_parameters.py  app_parameters_onsite.py  flask_as_node.py
scripts/webapp/static/css/: automatik.css  manuel.css  steuerung.css  style.css
scripts/webapp/templates/: automatik.html  base.html  graph.html  index.html  manuel.html  steuerung.html  steuerung_original.html  steuerung_parameters.html
src/: app.launch  laptop_nodes.launch  my_nodes.launch  new_node.launch  q_learning.launch  q_learning_3x3.launch  start_ros.sh
