<?xml version="1.0"?>
<package format="2">
  <name>crawler_controller</name>
  <version>0.0.0</version>
  <description>The crawler_controller package</description>


  <maintainer email="mars@todo.todo">mars</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>RPi.GPIO</build_depend>
  <build_depend>std_msgs.msg</build_depend>
  <build_depend>PIL</build_depend>
  <build_depend>luma.core.interface.serial</build_depend>
  <build_depend>luma.core.render</build_depend>
  <build_depend>luma.oled.device</build_depend>
  <build_depend>pynput</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>dynamixel_sdk</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>RPi.GPIO</build_export_depend>
  <build_export_depend>std_msgs.msg</build_export_depend>
  <build_export_depend>PIL</build_export_depend>
  <build_export_depend>luma.core.interface.serial</build_export_depend>
  <build_export_depend>luma.core.render</build_export_depend>
  <build_export_depend>luma.oled.device</build_export_depend>
  <build_export_depend>pynput</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>RPi.GPIO</exec_depend>
  <exec_depend>std_msgs.msg</exec_depend>
  <exec_depend>PIL</exec_depend>
  <exec_depend>luma.core.interface.serial</exec_depend>
  <exec_depend>luma.core.render</exec_depend>
  <exec_depend>luma.oled.device</exec_depend>
  <exec_depend>pynput</exec_depend>


  <export>


  </export>
</package>

